--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
+
+
 apply plugin: "java"
 
 version '1.0'
 
+//compile java 16 code, targeting java 8
 targetCompatibility = 8
 sourceCompatibility = JavaVersion.VERSION_16
 
@@ -14,8 +17,8 @@ repositories{
 
 ext{
     //the build number that this mod is made for
-    mindustryVersion = 'v131'
-    jabelVersion = "93fde537c7"
+    mindustryVersion = 'v135'
+    jabelVersion = "0.7.0"
     sdkRoot = System.getenv("ANDROID_HOME") ?: System.getenv("ANDROID_SDK_ROOT")
 }
 
@@ -29,7 +32,6 @@ allprojects{
 dependencies{
     compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
     compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
-
     annotationProcessor "com.github.Anuken:jabel:$jabelVersion"
 }
 
